variables.RunHalf.scala.error
Compilation error:
RunHalf:15: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
  if(2*biscuits = oranges +1){
      ^